examples/invalid/errores_lexicos_01.chs
cabal x DAR 5 @ FRENO
cabal y DAR # 3 FRENO
cabal z DAR 10 $ FRENO
cabal w DAR 2 ^ 4 FRENO
cabal árbol DAR 1 FRENO
cabal ñoño  DAR 2 FRENO
cabal éxito DAR 3 FRENO
cabal índice DAR 0 FRENO
cabal número DAR 10 FRENO
cabal función DAR 20 FRENO
cabal añadir DAR 30 FRENO
cabal variableInválida DAR 40 FRENO
cabal totalAño DAR 50 FRENO
cabal mañana DAR 1 FRENO
cabal señal  DAR 2 FRENO
cabal niño   DAR 3 FRENO
chisme msg1 DAR "esto es un string sin cerrar
cabal siguiente DAR 1 FRENO
cachito ch1 DAR 'caracter sin cerrar
cabal otraLinea DAR 2 FRENO
/* Este comentario nunca se cierra...
   y sigue en la siguiente línea
   y sigue más...
